# ondris

./: CONTRIBUTING.md  Cargo.toml  README.md
crates/ondris-core/src/: block.rs  chain.rs  difficulty.rs  genesis.rs  header.rs  lib.rs  rpc_types.rs  state.rs  transaction.rs
crates/ondris-miner/src/: main.rs
crates/ondris-network/: Cargo.toml
crates/ondris-network/src/: lib.rs  noise.rs
crates/ondris-node/: Cargo.toml
crates/ondris-node/src/: main.rs
crates/ondris-pow/src/: lib.rs
crates/ondris-primitives/src/: lib.rs
crates/ondris-wallet/src/: keystore.rs  main.rs
docs/: ALGORITHM.md  ARCHITECTURE.md  WHITEPAPER.md
website/: README.md  build.py  index.html  stats-template.html  stats.html  template.html
website/fonts/: mono-700.b64  serif-400.b64  serif-400i.b64  serif-600.b64
