[package]
name = "ondris-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ondris-core = { path = "../ondris-core" }
ondris-primitives = { path = "../ondris-primitives" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
snow.workspace = true
